Istio-Inject-sidecar-example/yamls/sash-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-06-17T13:18:20Z"
  generation: 2
  labels:
    app: sash-hello
    version: "1.0"
  name: sash-hello
  namespace: default
  resourceVersion: "910114"
  selfLink: /apis/apps/v1/namespaces/default/deployments/sash-hello
  uid: 565500ed-6ce7-4d6a-ab50-d27262fb9bb6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sash-hello
      version: "1.0"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sash-hello
        version: "1.0"
    spec:
      containers:
      - image: gcr.io/moses-k8/sash-quarkus-hello@sha256:73c0a7d36e81c16129fa3cdb91cb06dc43eec0b3aed0f37e8542127a0d76a7cf
        imagePullPolicy: IfNotPresent
        name: sash-quarkus-hello-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-06-17T13:18:40Z"
    lastUpdateTime: "2020-06-17T13:18:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-06-17T13:18:20Z"
    lastUpdateTime: "2020-06-17T13:18:40Z"
    message: ReplicaSet "sash-hello-b54cf8c5f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
