Istio-Inject-sidecar-example/yamls/sash-rest-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-06-18T18:19:40Z"
  labels:
    app: sash-rest-client
    version: 3.0.0
  name: sash-rest-client-service
  namespace: default
  resourceVersion: "1410033"
  selfLink: /api/v1/namespaces/default/services/sash-rest-client-service
  uid: 7789db28-bcda-40fc-8d26-95c484b7199b
spec:
  clusterIP: 10.0.1.168
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30750
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sash-rest-client
    version: 3.0.0
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
