Istio-Inject-sidecar-example/yamls/sash-rest-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-06-18T18:18:39Z"
  generation: 2
  labels:
    app: sash-rest-client
    version: 3.0.0
  name: sash-rest-client
  namespace: default
  resourceVersion: "1411403"
  selfLink: /apis/apps/v1/namespaces/default/deployments/sash-rest-client
  uid: c394e73f-9dc3-4cb0-b0fc-7b78d78f49fd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sash-rest-client
      version: 3.0.0
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sash-rest-client
        version: 3.0.0
    spec:
      containers:
      - image: gcr.io/moses-k8/rest-client@sha256:cc66dae7bf463ec92cf1c93cec425acd5d9f1ed3fa6a233e0a0c0b9c62cf1379
        imagePullPolicy: IfNotPresent
        name: rest-client-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-06-18T18:19:03Z"
    lastUpdateTime: "2020-06-18T18:19:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-06-18T18:18:39Z"
    lastUpdateTime: "2020-06-18T18:19:03Z"
    message: ReplicaSet "sash-rest-client-85595c4fd5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
